# ros2-vision-node-manager

./: CMakeLists.txt  README.md  package.xml
include/cvnode_manager/: cvnode_manager.hpp
src/: cvnode_manager.cpp  cvnode_manager_gui.cpp
